--- a/templates/float.twig
+++ b/templates/float.twig
@@ -2,6 +2,10 @@ use ChrisHarrison\VoGenerator\ValueObject;
 
 class FloatValue implements ValueObject
 {
+{% for trait in traits %}
+    use \{{ trait }};
+{%  endfor %}
+
     private $value;
 
     protected function __construct(?float $value)
@@ -60,5 +64,15 @@ class FloatValue implements ValueObject
             return static::fromNative($native);
         }
         return clone $this;
+    }
+
+    public function isSame(ValueObject $compare): bool
+    {
+        return $this->toNative() === $compare->toNative();
+    }
+
+    public function isNotSame(ValueObject $compare): bool
+    {
+        return !$this->isSame($compare);
     }
 }
