--- a/templates/integer.twig
+++ b/templates/integer.twig
@@ -1,7 +1,11 @@
 use ChrisHarrison\VoGenerator\ValueObject;
 
-class IntegerValue implements ValueObject
+class {{ name }} implements ValueObject
 {
+{% for trait in traits %}
+    use \{{ trait }};
+{%  endfor %}
+
     private $value;
 
     protected function __construct(?int $value)
@@ -60,5 +64,35 @@ class IntegerValue implements ValueObject
             return static::fromNative($native);
         }
         return clone $this;
+    }
+
+    public function isSame(ValueObject $compare): bool
+    {
+        return $this->toNative() === $compare->toNative();
+    }
+
+    public function isNotSame(ValueObject $compare): bool
+    {
+        return !$this->isSame($compare);
+    }
+
+    public function add(ValueObject $add): {{ name }}
+    {
+        return new static($this->value + $add);
+    }
+
+    public function subtract(ValueObject $subtract): {{ name }}
+    {
+        return new static($this->value - $subtract);
+    }
+
+    public function isMoreThan(ValueObject $compare): bool
+    {
+        return $this->toNative() > $compare->toNative();
+    }
+
+    public function isLessThan(ValueObject $compare): bool
+    {
+        return $this->toNative() > $compare->toNative();
     }
 }
