--- a/templates/boolean.twig
+++ b/templates/boolean.twig
@@ -1,16 +1,20 @@
 use ChrisHarrison\VoGenerator\ValueObject;
+use ChrisHarrison\VoGenerator\HookComposition;
 
 class {{ name }} implements ValueObject
 {
 {% for trait in traits %}
     use \{{ trait }};
 {%  endfor %}
+    use HookComposition;
 
     private $value;
 
     protected function __construct(?bool $value)
     {
-        $this->value = $value;
+        $this->composeHookable(function (?bool $value) {
+            $this->value = $value;
+        }, '__construct', $value);
     }
 
     /**
