--- a/templates/datetime.twig
+++ b/templates/datetime.twig
@@ -1,12 +1,14 @@
 use ChrisHarrison\VoGenerator\ValueObject;
 use DateTimeImmutable;
 use InvalidArgumentException;
+use ChrisHarrison\VoGenerator\HookComposition;
 
 class {{ name }} implements ValueObject
 {
 {% for trait in traits %}
     use \{{ trait }};
 {%  endfor %}
+    use HookComposition;
 
     /**
      * @var ?DateTimeImmutable
@@ -15,7 +17,9 @@ class {{ name }} implements ValueObject
 
     protected function __construct(?DateTimeImmutable $value)
     {
-        $this->value = $value;
+        $this->composeHookable(function (?DateTimeImmutable $value) {
+            $this->value = $value;
+        }, '__construct', $value);
     }
 
     /**
