--- a/templates/datetime.twig
+++ b/templates/datetime.twig
@@ -10,10 +10,7 @@ class {{ name }} implements ValueObject
 {%  endfor %}
     use HookComposition;
 
-    /**
-     * @var ?DateTimeImmutable
-     */
-    protected $value;
+    protected ?DateTimeImmutable $value;
 
     protected function __construct(?DateTimeImmutable $value)
     {
@@ -25,7 +22,7 @@ class {{ name }} implements ValueObject
     /**
      * @return static
      */
-    public static function null()
+    public static function null(): static
     {
         return static::fromNative(null);
     }
@@ -33,7 +30,7 @@ class {{ name }} implements ValueObject
     /**
      * @return static
      */
-    public static function now()
+    public static function now(): static
     {
         return static::fromNative((new DateTimeImmutable())->format(DATE_RFC3339_EXTENDED));
     }
@@ -42,7 +39,7 @@ class {{ name }} implements ValueObject
      * @param ?string $native
      * @return static
      */
-    public static function fromNative($native)
+    public static function fromNative(mixed $native): static
     {
         if ($native !== null) {
             if (is_string($native) === false) {
@@ -70,7 +67,7 @@ class {{ name }} implements ValueObject
     /**
      * @return string|null
      */
-    public function toNative()
+    public function toNative(): mixed
     {
         return $this->value ? $this->value->format(DATE_RFC3339_EXTENDED) : null;
     }
@@ -95,7 +92,7 @@ class {{ name }} implements ValueObject
      * @param ?string $native
      * @return static
      */
-    public function whenNull($native)
+    public function whenNull(mixed $native): static
     {
         if ($this->isNull()) {
             return static::fromNative($native);
