--- a/templates/enum.twig
+++ b/templates/enum.twig
@@ -52,7 +52,7 @@ class {{ name }} implements ValueObject
      * @param ?string $native
      * @return static
      */
-    public static function fromNative($native)
+    public static function fromNative(mixed $native): static
     {
         return new static($native);
     }
@@ -60,7 +60,7 @@ class {{ name }} implements ValueObject
     /**
      * @return string|null
      */
-    public function toNative()
+    public function toNative(): mixed
     {
         return $this->value;
     }
@@ -68,7 +68,7 @@ class {{ name }} implements ValueObject
     /**
      * @return static
      */
-    public static function null()
+    public static function null(): static
     {
         return new static(null);
     }
@@ -77,7 +77,7 @@ class {{ name }} implements ValueObject
      * @param ?string $native
      * @return static
      */
-    public function whenNull($native)
+    public function whenNull(mixed $native): static
     {
         if ($this->isNull()) {
             return static::fromNative($native);
@@ -112,7 +112,7 @@ class {{ name }} implements ValueObject
         /**
         * @return static
         */
-        public static function {{ value }}()
+        public static function {{ value }}(): static
         {
         return new static('{{ value }}');
         }
