--- a/templates/uuid.twig
+++ b/templates/uuid.twig
@@ -10,7 +10,7 @@ class {{ name }} implements ValueObject
 {%  endfor %}
     use HookComposition;
 
-    private $value;
+    private ?string $value;
 
     protected function __construct(?string $value)
     {
@@ -27,7 +27,7 @@ class {{ name }} implements ValueObject
     /**
     * @return static
     */
-    public static function generate()
+    public static function generate(): static
     {
         return new static(Uuid::uuid4()->toString());
     }
@@ -51,7 +51,7 @@ class {{ name }} implements ValueObject
     /**
      * @return static
      */
-    public static function null()
+    public static function null(): static
     {
         return new self(null);
     }
@@ -59,7 +59,7 @@ class {{ name }} implements ValueObject
     /**
      * @return string|null
      */
-    public function toNative()
+    public function toNative(): mixed
     {
         return $this->value;
     }
@@ -68,7 +68,7 @@ class {{ name }} implements ValueObject
      * @param ?string $native
      * @return static
      */
-    public static function fromNative($native)
+    public static function fromNative(mixed $native): static
     {
         return new static($native);
     }
@@ -77,7 +77,7 @@ class {{ name }} implements ValueObject
      * @param ?string $native
      * @return static
      */
-    public function whenNull($native)
+    public function whenNull(mixed $native): static
     {
         if ($this->isNull()) {
             return static::fromNative($native);
