Update the 'set' template return type for count()

--- a/templates/set.twig
+++ b/templates/set.twig
@@ -160,7 +160,7 @@ class {{ name }} implements {{ implements|implements }}
         return !$this->isSame($compare);
     }
 
-    public function count()
+    public function count(): int
     {
         return count($this->set);
     }
